footer alignment fix

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -13,8 +13,7 @@ html, body {height: 100%;}
   clear:both;
 
   .footer_legal div ul {
-    float: right;
-
+    
     li {
       color: darken($cmLightGrey, 10%);
       font-size: 14px;
